Now use uuid to generate unique identifier for new users

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* use postgres/redis PubSub implementation
 * Set up winston logging
 * Is "runInBand" option working for jest e2e tests? 
 * Replace subscriptions-transport-ws with graphql-ws?
+* e2e testing: https://www.youtube.com/watch?v=Ml2ZqQ2WECg
