Now use uuid to generate unique identifier for new users

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@
 * Is "runInBand" option working for jest e2e tests? 
 * Replace subscriptions-transport-ws with graphql-ws?
 * e2e testing: https://www.youtube.com/watch?v=Ml2ZqQ2WECg
+* add Typegraphql or gql2ts
